# kafu

./: .clang-format  .gitignore  404.html  Cargo.toml  Dockerfile  LICENSE  README.md  grocery.html  index.html  install.sh  justfile  kafu-config.html  license.html  print.html  searcher-c2a407aa.js  searchindex-28bcbf99.js  searchindex-36f8e979.js  searchindex-fa115377.js  toc-156469e8.js  toc.html
.github/workflows/: build-and-test.yml  create-release.yml  deploy-mdbook.yml  format.yml  publish-docker-image.yml
cli/: clang.html  index.html  kustomize.html  serve.html  singlenode.html
crates/kafu_clang/: Cargo.toml
crates/kafu_clang/src/: main.rs
crates/kafu_cli/: Cargo.toml
crates/kafu_cli/src/: main.rs
crates/kafu_config/: Cargo.toml
crates/kafu_config/src/: lib.rs
crates/kafu_config/tests/: parse_and_validate.rs
crates/kafu_config/tests/fixtures/: basic.yaml  empty_cluster.yaml
crates/kafu_kustomize/: Cargo.toml
crates/kafu_kustomize/src/: lib.rs  main.rs
crates/kafu_kustomize/templates/: configmap.yaml.tpl
crates/kafu_kustomize/templates/bases/: kafu-server-pod.yaml  kafu-server-service.yaml  kustomization.yaml
crates/kafu_kustomize/templates/overlays/: kustomization.yaml.tpl  patch.yaml.tpl
crates/kafu_kustomize/tests/: tests.rs
crates/kafu_kustomize/tests/fixtures/: basic-input.yaml  basic-output.yaml  with-instance-output.yaml
crates/kafu_runtime/: Cargo.toml
crates/kafu_runtime/src/: lib.rs  witx.rs
crates/kafu_runtime/src/engine/: config.rs  instance.rs  kafu_metadata.rs  linker.rs  migration.rs  mod.rs  module.rs  store.rs
crates/kafu_runtime/tests/: wat_smoke.rs
crates/kafu_serve/: Cargo.toml  build.rs
crates/kafu_serve/proto/: service.proto
crates/kafu_serve/src/: cli.rs  cluster.rs  constants.rs  error.rs  lib.rs  liveness.rs  main.rs  migration.rs  runtime.rs  service.rs  testing.rs
crates/kafu_serve/src/grpc/: client.rs  mod.rs
crates/kafu_serve/tests/: grpc_integration.rs
crates/kafu_singlenode/: Cargo.toml
crates/kafu_singlenode/src/: main.rs
development/: architecture.html  build.html  index.html  snapify.html
docs/: book.toml
docs/src/: README.md  SUMMARY.md  grocery.md  kafu-config.md  license.md
docs/src/cli/: README.md  clang.md  kustomize.md  serve.md  singlenode.md
docs/src/development/: README.md  architecture.md  build.md  snapify.md
docs/src/guide/: build_system_integration.md  installation.md  kubernetes_integration.md  quick_start.md
examples/basic/: README.md  k8s-kafu-config.yaml  kafu-config.yaml  main.c
examples/basic-cpp/: Makefile  README.md  kafu-config.yaml  main.cpp
examples/image-classification/: Makefile  README.md  kafu-config.yaml  main.c
guide/: build_system_integration.html  installation.html  kubernetes_integration.html  quick_start.html
include/: kafu.h  kafu_helper.h  spectest.h  wasi_nn_backend.h  wasi_nn_types.h
witx/: kafu.witx
