[package]
name = "kafu_runtime"
version.workspace = true
edition = "2021"
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.96"
wasmtime = { features = ["component-model", "wat"], git = "https://github.com/bytecodealliance/wasmtime.git" }
wiggle = { git = "https://github.com/bytecodealliance/wasmtime.git" }
wasi-common = { git = "https://github.com/bytecodealliance/wasmtime.git" }
wasmtime-wasi-nn = { features = ["onnx-download"], git = "https://github.com/bytecodealliance/wasmtime.git" }
wasmtime-wast = { git = "https://github.com/bytecodealliance/wasmtime.git" }
cap-std = "3.3.0"
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.30", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmparser = "0.240.0"
thiserror = "2.0.17"
image = { version = "0.25.9", features = ["jpeg"] }
rand = "0.9.2"
kafu_config = { path = "../kafu_config" }
tempfile = "3"
sha2 = "0.10"
libc = "0.2"
rayon = "1.10"

[dev-dependencies]
wat = "1"
