[package]
name = "kafu_serve"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true

[dependencies]
prost = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.14"
tonic-prost = "0.14"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
kafu_runtime = { path = "../kafu_runtime" }
kafu_config = { path = "../kafu_config" }
tonic-health = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }
sha2 = "0.10"
lz4_flex = "0.12"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
wat = "1"
