[package]
name = "kafu_singlenode"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
kafu_runtime = { path = "../kafu_runtime" }
kafu_config = { path = "../kafu_config" }
tonic-health = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3"